<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.RegisterActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/user_register"
        android:textColor="@color/red1245"
        android:textSize="20dp"
        android:textStyle="bold" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="89dp"
        android:orientation="vertical"
        android:layout_gravity="center_vertical">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/purple_700"
            />
        <TextView
            android:text="@string/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:backgroundTint="@color/yellow"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_gravity="center_vertical"
            android:textSize="18sp"
            />
        <EditText
            android:id="@+id/register_phone"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:inputType="textPersonName"
            android:background="@drawable/editext_selector"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:hint="@string/hint_phone"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="89dp"
        android:orientation="vertical"
        android:layout_gravity="center_vertical">
        <TextView
            android:text="@string/nick_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:backgroundTint="@color/yellow"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_gravity="center_vertical"
            android:textSize="18dp"
            />
        <EditText
            android:id="@+id/nick_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:background="@drawable/editext_selector"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:hint="@string/hint_nick_name"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_gravity="center_vertical">

        <TextView
            android:layout_width="62dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:backgroundTint="@color/yellow"
            android:text="@string/gender"
            android:textColor="@color/black"
            android:textSize="18dp" />
        <RadioGroup
            android:id="@+id/gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:text="@string/boy"
                android:id="@+id/gender1"
                android:checked="false"/>
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:layout_weight="1"
                android:text="@string/girl"
                android:id="@+id/gender2"
                android:checked="false"/>
        </RadioGroup>
    </LinearLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_height="0.1dp"
        android:background="#131212"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="89dp"
        android:orientation="vertical"
        android:layout_gravity="center_vertical">
        <TextView
            android:text="@string/age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:backgroundTint="@color/yellow"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_gravity="center_vertical"
            android:textSize="18dp"
            />
        <EditText
            android:id="@+id/age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:background="@drawable/editext_selector"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:hint="@string/hint_age"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:orientation="vertical"
        android:layout_gravity="center_vertical">
        <TextView
            android:text="@string/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:backgroundTint="@color/yellow"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_gravity="center_vertical"
            android:textSize="18dp"
            />
        <EditText
            android:id="@+id/register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:layout_marginLeft="30dp"
            android:background="@drawable/editext_selector"
            android:layout_marginRight="30dp"
            android:hint="@string/hint_password"/>
        <TextView
            android:text="@string/confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:backgroundTint="@color/yellow"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_gravity="center_vertical"
            android:textSize="18dp"
            />
        <EditText
            android:id="@+id/confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@drawable/editext_selector"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:hint="@string/hint_password"/>
        <TextView
            android:text="@string/regular_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="normal"
            android:textColor="@color/colourless"
            android:backgroundTint="@color/yellow"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_gravity="center_vertical"
            android:textSize="10dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/user_to_Register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/register_back"
            android:text="@string/back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"
            />
    </LinearLayout>
</LinearLayout>