<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ForgetPasswordActivity"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/modify_password"
        android:textColor="@color/red1245"
        android:textSize="20dp"
        android:textStyle="bold" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="89dp"
        android:orientation="vertical"
        android:layout_gravity="center_vertical">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/purple_700"
            />
        <TextView
            android:text="@string/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:backgroundTint="@color/yellow"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_gravity="center_vertical"
            android:textSize="18dp"
            />
        <EditText
            android:id="@+id/forget_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:hint="@string/hint_phone"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="89dp"
        android:orientation="vertical"
        android:layout_gravity="center_vertical">
        <TextView
            android:text="@string/new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:backgroundTint="@color/yellow"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_gravity="center_vertical"
            android:textSize="18dp"
            />
        <EditText
            android:id="@+id/forget_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:hint="@string/hint_password"/>
        <TextView
            android:text="@string/regular_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="normal"
            android:textColor="@color/colourless"
            android:backgroundTint="@color/yellow"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_gravity="center_vertical"
            android:textSize="10dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/confirm_modify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirm_modify"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/forget_back"
            android:text="@string/back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"
            />
    </LinearLayout>
</LinearLayout>