<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/white"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
    <TextView
        android:layout_weight="2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        android:textStyle="bold"
        android:textColor="@color/black"

        />
    <ImageView
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:src="@drawable/to_parking"/>
    </LinearLayout>

    <TextView
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_marginLeft="30dp"
        android:textSize="50sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        />
    <TextView
        android:layout_weight="2"
        android:layout_width="match_parent"
        android:layout_height="20dp"/>
    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:layout_gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:gravity="center"
            android:text="@string/phone_number"
            android:textColor="@color/black"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/phone"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/editext_selector"

            android:layout_marginRight="30dp"
            android:hint="@string/hint_phone"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:textSize="17sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:layout_gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:gravity="center"
            android:text="@string/phone_password"
            android:textColor="@color/black"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/editext_selector"

            android:layout_marginRight="30dp"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:textSize="17sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/toRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:layout_weight="1"
            android:layout_marginLeft="32dp"
            android:backgroundTint="@color/white"
            android:textColor="@color/blue"
            android:clickable="true"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            />
        <CheckBox
            android:id="@+id/remember_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/remember_email_password" />
    </LinearLayout>

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:layout_weight="1"
        android:textColor="@color/white"
        android:backgroundTint="@color/blue"
        android:text="@string/login" />

    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:gravity="center_horizontal">
        <TextView
            android:id="@+id/to_forget_password"
            android:layout_width="128dp"
            android:layout_height="match_parent"
            android:text="@string/forget_password"
            android:backgroundTint="@color/white"
            android:gravity="center"
            android:textColor="@color/blue"
            android:clickable="true"
            />
    </LinearLayout>
    <Button
        android:id="@+id/add_stall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/add_stall"
        android:backgroundTint="@color/white"
        android:textColor="@color/blue"
        android:layout_gravity="right"
        android:layout_weight="1"
        />
</LinearLayout>