<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.MyMoneyActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_index_two"
    android:layout_margin="10dp"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/my_money"
        android:textColor="@color/black"
        android:gravity="center"
        android:textSize="20sp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/white"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_margin="20dp"
            android:text="@string/my_use_balance"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/my_balance"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="10dp"
                android:textSize="30sp"
                android:gravity="center"
                android:textColor="@color/black"
                android:drawableLeft="@drawable/my_balance"
                android:textStyle="italic"/>
            <Button
                android:id="@+id/my_to_recharge"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:layout_marginBottom="25dp"
                android:layout_marginTop="25dp"
                android:layout_marginRight="5dp"
                android:text="@string/my_recharge"
                android:textSize="20sp"
                />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>